# httpServer

./: .gitignore  CMakeLists.txt  main.c  run.sh
.cache/clangd/index/: main.c.25ACC5B71B3DDC63.idx  server.c.865468AE0ABA6452.idx  server.h.907254B8DB59CF64.idx
include/: server.h
src/: server.c
